Dockerfile: remove `gnupg` from dev image (#1885)
* Dockerfile: remove `gnupg` from dev image
* Update CHANGELOG.md

--- a/control-plane/Dockerfile
+++ b/control-plane/Dockerfile
@@ -41,7 +41,7 @@ LABEL name=${BIN_NAME} \
 ENV BIN_NAME=${BIN_NAME}
 ENV VERSION=${VERSION}
 
-RUN apk add --no-cache ca-certificates gnupg libcap openssl su-exec iputils libc6-compat iptables
+RUN apk add --no-cache ca-certificates libcap openssl su-exec iputils libc6-compat iptables
 
 # Create a non-root user to run the software.
 RUN addgroup ${BIN_NAME} && \
