--- a/charts/consul/templates/client-daemonset.yaml
+++ b/charts/consul/templates/client-daemonset.yaml
@@ -509,6 +509,12 @@ spec:
         - name: CONSUL_LOGIN_META
           value: "component=client,pod=$(NAMESPACE)/$(POD_NAME)"
         {{- end }}
+        - name: CONSUL_LOGIN_DATACENTER
+        {{- if and .Values.global.federation.enabled .Values.global.federation.primaryDatacenter }}
+          value: {{ .Values.global.federation.primaryDatacenter }}
+        {{- else }}
+          value: {{ .Values.global.datacenter }}
+        {{- end}}
         command:
           - "/bin/sh"
           - "-ec"
