add sameness group CRD (#2048)
* draft of adding sameness group CRD

* move sameness group tests to ent test file

* update tests

* fix lint issues

* generate yaml and update helm charts

* update field descriptions and validation and its test

* remove unwanted files, add license comments back

* rename samenessgroups to samenessgroup

* fix resource names

* update failing unit test

--- a/charts/consul/templates/connect-inject-clusterrole.yaml
+++ b/charts/consul/templates/connect-inject-clusterrole.yaml
@@ -24,6 +24,7 @@ rules:
   - serviceintentions
   - ingressgateways
   - terminatinggateways
+  - samenessgroups
   {{- if .Values.global.peering.enabled }}
   - peeringacceptors
   - peeringdialers
@@ -49,6 +50,7 @@ rules:
   - serviceintentions/status
   - ingressgateways/status
   - terminatinggateways/status
+  - samenessgroups/status
   {{- if .Values.global.peering.enabled }}
   - peeringacceptors/status
   - peeringdialers/status
