--- a/control-plane/config/crd/bases/consul.hashicorp.com_serviceresolvers.yaml
+++ b/control-plane/config/crd/bases/consul.hashicorp.com_serviceresolvers.yaml
@@ -76,13 +76,14 @@ spec:
                         the current namespace is used.
                       type: string
                     policy:
-                      description: FailoverPolicy specifies the exact mechanism used for failover.
+                      description: Policy specifies the exact mechanism used for failover.
                       properties:
                         mode:
-                          description: Mode specifies the type of failover that will be performed. 
-                            Valid values are "sequential", "" (equivalent to "sequential") and "order-by-locality".
+                          description: Mode specifies the type of failover that will
+                            be performed. Valid values are "sequential", "" (equivalent
+                            to "sequential") and "order-by-locality".
                           type: string
-                        regions: 
+                        regions:
                           description: The ordered list of the regions of the failover targets.
                             Valid values can be "us-west-1", "us-west-2", and so on.
                           items:
