add sameness group to exported services (#2075)
* add sameness group to exported services

* update CRDs

* update deep copy

* re add license line

* check if sameness group is wildcard

* remove experimental tag on peering fields

* update error message case

* update error message case in webhook test

--- a/charts/consul/templates/crd-exportedservices.yaml
+++ b/charts/consul/templates/crd-exportedservices.yaml
@@ -76,8 +76,11 @@ spec:
                               the service to.
                             type: string
                           peer:
-                            description: '[Experimental] Peer is the name of the peer
-                              to export the service to.'
+                            description: Peer is the name of the peer to export the service to.
+                            type: string
+                          samenessGroup:
+                            description: SamenessGroup is the name of the sameness
+                              group to export the service to.
                             type: string
                         type: object
                       type: array
