--- a/control-plane/config/crd/bases/consul.hashicorp.com_samenessgroups.yaml
+++ b/control-plane/config/crd/bases/consul.hashicorp.com_samenessgroups.yaml
@@ -54,16 +54,27 @@ spec:
             description: SamenessGroupSpec defines the desired state of SamenessGroup.
             properties:
               defaultForFailover:
-                description: 'DefaultForFailover indicates that upstream requests to members of the given sameness group will implicitly failover between members of this sameness group.'
+                description: DefaultForFailover indicates that upstream requests to
+                  members of the given sameness group will implicitly failover between
+                  members of this sameness group. When DefaultForFailover is true,
+                  the local partition must be a member of the sameness group or IncludeLocal
+                  must be set to true.
                 type: boolean
               includeLocal:
-                description: 'IncludeLocal is used to include the local partition as the first member of the sameness group.'
+                description: IncludeLocal is used to include the local partition as
+                  the first member of the sameness group. The local partition can
+                  only be a member of a single sameness group.
                 type: boolean
               members:
-                description: 'Members are the partitions and peers that are part of the sameness group.'
+                description: Members are the partitions and peers that are part of
+                  the sameness group. If a member of a sameness group does not exist,
+                  it will be ignored.
                 items:
                   properties:
                     partition:
+                      description: The partitions and peers that are part of the sameness
+                        group. A sameness group member cannot define both peer and
+                        partition at the same time.
                       type: string
                     peer:
                       type: string
