Spatel/net 1646 add max ejection percent and base ejection time (#2064)
* Add MaxEjectionPercent and BaseEjectionTime to servicedefaults

* test with sister branch in consul repo

* missed one

* fix tag names

* fix json tags and duration type

* update test

* generate yaml files and fix imports

---------

Co-authored-by: Semir Patel <semir.patel@hashicorp.com>

--- a/acceptance/tests/fixtures/bases/crds-oss/servicedefaults.yaml
+++ b/acceptance/tests/fixtures/bases/crds-oss/servicedefaults.yaml
@@ -22,6 +22,8 @@ spec:
         interval: 1s
         maxFailures: 10
         enforcing_consecutive_5xx: 60
+        maxEjectionPercent: 100
+        baseEjectionTime: 20s
     - name: "bar"
       limits:
         maxConnections: 5
